refactor: reduce command allocations and simplify services